discussion/kv_engine/156557/156557_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Add mcbp_fuzz_test

mcbp_fuzz_test is a small test program which use libFuzzer
(https://llvm.org/docs/LibFuzzer.html) to test the package
validation code.

The program is not built by default, and you need to explicitly
add -DBUILD_MCBP_FUZZ_TEST=ON when invoking CMake (Note: you
should also be using clang and have libfuzzer available. This
is not checked by CMake in this patch)

Once built it may be run with:

    ./mcbp_fuzz_test -max_len=32

(There isn't much value of larger values as the packet header
is the first 32 bytes).

A natural extension would be:

1. Open a socket, auth and select bucket and then send the packet
   over the wire (it would also validate the execution on the
   server which should be running with asan)

2. Change the fuzz-method so that we only fuzz _part_ of the
   header. Some of our commands require JSON payload, and the
   odds of the fuzzer generating JSON is relatively low. (There
   may be other fuzzers which does a better job at this. We don't
   need to fuzz-test random values for opaque for instance),

Change-Id: I74da642ce6f9623feb4598549418285e3ac5f12e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-29 07:20:57.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-29 07:45:52.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10292/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/front_end_thread.h:22:10: error: "subdoc/operations.h" file not found [clang-diagnostic-error]
#include <subdoc/operations.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10292/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/front_end_thread.h:22:10:
error: "subdoc/operations.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10292/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37393/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0094/0157]: vbucket del (dead)...(38 ms) OK


99% tests passed, 2 tests failed out of 403

Total Test time (real) = 626.60 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37393/ )

Timeout of a CTest test 402/403 Test  #65: ep-engine_ep_unit_tests.DurabilityRespondAmbiguousTest ........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37393/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31892/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8894/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11862/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12013/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12345/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10943/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19905/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
